--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <small>The sample API is from <a href="//pokeapi.co/" target="_blank">pokéAPI</a>.</small>
         </div>
         <div class="zn-card">
-            <pre><code>{{ items }}</code></pre>
+            <pre>{{ items }}</pre>
         </div>
     </div>
     <footer>
