--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>{{ title }} 🔎</h1>
         <p>{{ desc }}</p>
         <div class="zn-input">
-            <input type="text" @change="changeHandler" placeholder="Type the API URL here" required>
+            <input type="text" v-model="feed" @change="changeHandler" placeholder="Type the API URL here" required>
             <small>The sample API is from <a href="//jsonplaceholder.typicode.com/" target="_blank">JSON Placeholder</a>.</small>
         </div>
         <div class="zn-card">
